--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 
     <!-- CONTACT -->
-    <section class="contact">
+<!--     <section class="contact">
         <div class="container">
             <div class="row">
                 <h2 data-sr="wait 0.5s, then enter top and move 40px over 1s"><span>CONTACT US</span></h2>
@@ -141,7 +141,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- END CONTACT -->
 
 
@@ -150,17 +150,17 @@
         <div id="google-container"></div>
         <div id="zoom-in"></div>
         <div id="zoom-out"></div>
-<!--         <div class="contact-info">
+        <div class="contact-info">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <address data-sr="wait 0.25s, then enter left and move 40px over 1s"><i class="fa fa-map-marker"></i>Bear Valley, CA</address>
-                        <div class="phone" data-sr="wait 0.25s, then enter top and move 40px over 1s"><i class="fa fa-mobile"></i>+61 9 211 3747</div>
+                        <div class="phone" data-sr="wait 0.25s, then enter top and move 40px over 1s">&nbsp;</div>
                         <div class="email" data-sr="wait 0.25s, then enter right and move 40px over 1s"><i class="fa fa-paper-plane"></i>info@endeavor-usa.com</div>
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
     </section>
     <!-- END GOOGLE MAP -->
 
@@ -170,7 +170,7 @@
         <div class="container">
             <div class="row">
 
-                <a href="#top" class="up-btn"><i class="fa fa-chevron-up"></i></a>
+ <!--                <a href="#top" class="up-btn"><i class="fa fa-chevron-up"></i></a> -->
 
                 <ul class="social-icon" data-sr="wait 0.5s, then enter left and move 40px over 1s">
                     <li><a href="https://www.youtube.com/channel/UCpN2POrdPwIfg95OK60OZ8g"><i class="fa fa-fw fa-youtube"></i></a></li>
