--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         <!-- /COUNTDOWN -->
 
         <!-- MOUSE ICON -->
-<!--         <div class="mouse">
-            <a href="#services">
+        <div class="mouse">
+            <a href="#subscribe">
                 <i class="fa fa-chevron-down"></i>
             </a>
-        </div> -->
+        </div>
         <!-- /MOUSE ICON -->
 
 
@@ -108,7 +108,7 @@
 
 
     <!-- SUBSCRIBE -->
-    <section class="subscribe">
+    <section class="subscribe" id="subscribe">
         <div class="container">
             <div class="row">
                 <h2 data-sr="wait 0.5s, then enter top and move 40px over 1s"><i class="fa fa-paper-plane"></i>SUBSCRIBE TO OUR NEWSLETTER</h2>
