--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="logo"><img src="images/logo_transparent.png" width="190" height="190" alt=""> </div>
 
-        <h1>COMING SOON</h1>
+        <h1>Endeavor 2017</h1>
 
         <p>Two person teams, 30+ hours, more than 40 miles covered. <br/> The Endeavor Team Challenge is an an unforgettable adventure and a monumental test of fitness.</p>
 
