--- a/index.html
+++ b/index.html
@@ -45,31 +45,36 @@
 
     <!-- HEADER -->
     <header id="#top">
+        <!-- if you want to youtube video, delete the comments -->
+        <!-- YOUTUBE PLAYER -->
+        <div id="video" data-video="r9SREM0OYjk" data-mute="true"></div>
+        <!-- /YOUTUBE PLAYER -->
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="logo"><img src="images/logo_transparent.png" width="190" height="190" alt=""> </div>
+            </div>
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 
-  <!-- if you want to youtube video, delete the comments -->
-  <!-- YOUTUBE PLAYER -->
-  <div id="video" data-video="r9SREM0OYjk" data-mute="true"></div>
-  <!-- /YOUTUBE PLAYER -->
+                <h1 class="text-center">Endeavor 2017</h1>
 
-        <div class="logo"><img src="images/logo_transparent.png" width="190" height="190" alt=""> </div>
+                <p class="lead text-center">Two person teams, 30+ hours, more than 40 miles covered. </p> 
+                <p class="lead text-center">The Endeavor Team Challenge is an an unforgettable adventure and a monumental test of fitness.</p>
+            </div>
+            <div class="col-xs-12 text-center">
 
-        <h1>Endeavor 2017</h1>
+                <!-- COUNTDOWN -->
+                <div class="countdown"> </div>
+                <!-- /COUNTDOWN -->
 
-        <p>Two person teams, 30+ hours, more than 40 miles covered. <br/> The Endeavor Team Challenge is an an unforgettable adventure and a monumental test of fitness.</p>
-
-        <!-- COUNTDOWN -->
-        <div class="countdown"> </div>
-        <!-- /COUNTDOWN -->
-
-        <!-- MOUSE ICON -->
-        <div class="mouse">
-            <a href="#subscribe">
-                <i class="fa fa-chevron-down"></i>
-            </a>
+                <!-- MOUSE ICON -->
+                <div class="mouse">
+                    <a href="#subscribe">
+                        <i class="fa fa-chevron-down"></i>
+                    </a>
+                </div>
+                <!-- /MOUSE ICON -->
+            </div>
         </div>
-        <!-- /MOUSE ICON -->
-
-
     </header>
     <!-- END HEADER -->
 
